<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator Widgets - Free</string>
    <string name="amount_text">Amount:</string>
    <string name="tip_text">Tip:</string>
    <string name="split_text">Split:</string>
    <string name="total_text">Total:</string>
    <string name="total_split_text">Split Total:</string>
    <string name="total_tip_text">Tip:</string>
    <string name="total_tip_split_text">Split Tip:</string>
    <string name="amount_value">$0.00</string>
    <string name="tip_title">Select your tip!</string> 
    <string name="split_title">Split the bill!</string>
    <string name="tip_value">15%</string>
    <string name="split_value">1</string>
    <string name="total_value"></string>
    <string name="total_split_value"></string>
    <string name="total_tip_value"></string>
    <string name="total_tip_split_value"></string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>